Fix search button wrapping on some systems

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -738,6 +738,7 @@ div.support-search input.btn-important {
 }
 
 .html-rtl div.support-search input.btn-important {
+    float: right;
     margin: 0 6px 0 0;
 }
 
